--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ fabric.properties
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff:
+# User-specific stuff updated:
 .idea/*
 .idea/workspace.xml
 .idea/tasks.xml
