--- a/angular2-master/package.json
+++ b/angular2-master/package.json
@@ -11,17 +11,22 @@
     "angular2": "2.0.0-beta.2",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.1.1",
+    "bootstrap-sass": "^3.3.7",
+    "breakpoint-sass": "^2.7.0",
     "del": "^2.2.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "gulp": "^3.9.0",
     "gulp-if": "^2.0.1",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "gulp-webserver": "^0.9.1",
+    "jquery": "^3.1.0",
     "lazypipe": "^1.0.1",
+    "leaflet": "^0.7.7",
     "pump": "^1.0.1",
     "reflect-metadata": "0.1.2",
     "run-sequence": "^1.2.2",
