--- a/gulp-boilerplate/package.json
+++ b/gulp-boilerplate/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "gulp-dom": "^0.9.0",
     "gulp-eslint": "^3.0.1",
     "gulp-html-replace": "^1.6.1",
     "gulp-jshint": "^2.0.1",
     "gulp-replace-task": "^0.11.0",
+    "gulp-shell": "^0.5.2",
     "jshint": "^2.9.2"
   }
 }
