--- a/gulp-boilerplate/package.json
+++ b/gulp-boilerplate/package.json
@@ -16,6 +16,7 @@
     "gulp-jshint": "^2.0.1",
     "gulp-replace-task": "^0.11.0",
     "gulp-shell": "^0.5.2",
-    "jshint": "^2.9.2"
+    "jshint": "^2.9.2",
+    "yargs": "^5.0.0"
   }
 }
